syntax = "proto3";

option java_multiple_files = true;

option java_package = "io.quarkus.example";
option java_outer_classname = "HelloWorldProto";


// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc GetListUsers (Empty) returns (UserList) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message UserList {
  repeated User users = 1;
}

message User {
  string name = 1;
  int32 age = 2;
  string email = 3;
}

message Empty {
}